refactor: conectar wallet metamask

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.84.1",
     "@wagmi/core": "^2.18.1",
+    "ethers": "^6.15.0",
     "jspdf": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
