--- a/Backend/package.json
+++ b/Backend/package.json
@@ -50,6 +50,7 @@
     "verify": "yarn hardhat:verify"
   },
   "devDependencies": {
+    "hardhat": "^2.26.1",
     "husky": "~9.1.6",
     "lint-staged": "~13.2.2"
   },
