--- a/Backend/packages/nextjs/public/manifest.json
+++ b/Backend/packages/nextjs/public/manifest.json
@@ -1,5 +1,23 @@
 {
-  "name": "Scaffold-ETH 2 DApp",
-  "description": "A DApp built with Scaffold-ETH",
-  "iconPath": "logo.svg"
+  "short_name": "TalentRise",
+  "name": "TalentRise - Descubre y apoya el talento del futuro",
+  "description": "App de talento progresiva para conectar, invertir y apoyar a creadores de todo el mundo.",
+  "icons": [
+    {
+      "src": "/logo-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#4a90e2",
+  "background_color": "#ffffff",
+  "orientation": "portrait-primary",
+  "scope": "/"
 }
